--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 
 title: Spike sorting events
-description: Material for courses, conferences, and events about SpikeInterface
+description: Material for courses, conferences, and events about SpikeInterface, spike sorting, and electrophysiology analysis
